# act_teamproject

./: .gitmessage.txt  db.sqlite3  manage.py  pyproject.toml
.github/workflows/: checks.yml  ci.yml
act_Main/: apps.py  models.py  urls.py  views.py
api/: urls.py  views.py
config/: settings.py  urls.py
recruit/: forms.py  models.py  urls.py  views.py
templates/: Main_Page.html  home.html
users/: models.py  views.py
